# orbitcab

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  release.yml
cmake/: GenerateOrbitCabVersion.cmake  bump_build.cmake
docs/: ARCHITECTURE.md  ASSET-LICENSES.md  BUILD.md  CODING-STYLE.md  IR-LOADER-DESIGN.md  NAMZ-FORMAT.md
installer/: README.md  build-pkg.sh  orbitcab.iss  standalone.entitlements
resources/poweramps/: README.md
resources/preamps/: GtrVolt-blue-07h-boost.namz  GtrVolt-blue-07h.namz  GtrVolt-blue-08h-boost.namz  GtrVolt-blue-08h.namz  GtrVolt-blue-09h-boost.namz  GtrVolt-blue-09h.namz  GtrVolt-blue-10h-boost.namz  GtrVolt-blue-10h.namz  GtrVolt-blue-11h-boost.namz  GtrVolt-blue-11h.namz  GtrVolt-blue-12h-boost.namz  GtrVolt-blue-12h.namz  GtrVolt-blue-13h-boost.namz  GtrVolt-blue-13h.namz  GtrVolt-blue-14h-boost.namz  GtrVolt-blue-14h.namz  GtrVolt-blue-15h-boost.namz  GtrVolt-blue-15h.namz  GtrVolt-blue-16h-boost.namz  GtrVolt-blue-16h.namz  GtrVolt-blue-17h-boost.namz  GtrVolt-blue-17h.namz  GtrVolt-green-07h-boost.namz  GtrVolt-green-07h.namz  GtrVolt-green-08h-boost.namz  GtrVolt-green-08h.namz  GtrVolt-green-09h-boost.namz  GtrVolt-green-09h.namz  GtrVolt-green-10h-boost.namz  GtrVolt-green-10h.namz  GtrVolt-green-11h-boost.namz  GtrVolt-green-11h.namz  GtrVolt-green-12h-boost.namz  GtrVolt-green-12h.namz  GtrVolt-green-13h-boost.namz  GtrVolt-green-13h.namz  GtrVolt-green-14h-boost.namz  GtrVolt-green-14h.namz  GtrVolt-green-15h-boost.namz  GtrVolt-green-15h.namz  (+161 more)
resources/preamps-local/: README.md
resources/presets/: Allele of Justice.orbitcab  Carbon Exodus.orbitcab  Cargo Dock.orbitcab  Casimir Effect.orbitcab  Flying Cities.orbitcab  Galaxy Sea.orbitcab  Gravity Well.orbitcab  Higgs Ocean.orbitcab  Inflaton Field.orbitcab  Junk DNA.orbitcab  Kuiper Relay.orbitcab  Lagrange Point.orbitcab  Magnetar Pulse.orbitcab  Moon Bridge.orbitcab  Neutrino Rain.orbitcab  Neutron Accretion.orbitcab  Orbit Home.orbitcab  Phenotype Drift.orbitcab  Photon Sail.orbitcab  Recessive Rage.orbitcab  Roche Limit.orbitcab  Selfish Gene.orbitcab  Telomere Burn.orbitcab  Titan Methane.orbitcab
resources/reverb-ir/: README.md
src/: AppPreferences.h  FactoryPresets.h  IRLibrary.h  Metadata.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PowerampLibrary.h  PreampLibrary.h  PreampRig.h  PreampSelector.h  PresetManager.cpp  PresetManager.h  ReverbLibrary.h  RigPack.h  StateModel.h  UpdateChecker.cpp  UpdateChecker.h
src/core/: AmpEq.h  AmpStage.cpp  AmpStage.h  AutoLeveler.h  BlendAnalysis.h  CabEngine.cpp  CabEngine.h  Convolver.h  CoreConvolver.h  DryAligner.h  IRMath.h  IRSlot.cpp  IRSlot.h  LevelProbe.h  NamCodec.cpp  NamCodec.h  NoiseGate.h  Params.h  SpectrumTap.h  StreamResampler.h  WaveformMath.h
src/poweramp/: DESIGN-block2.md  DESIGN-block3.md  PLAN.md  PowerAmpRouter.cpp  PowerAmpRouter.h  RULES.md  STATUS.md  SagEnvelope.h  TubeKernel.h  TubePowerAmp.cpp  TubePowerAmp.h  oss-research-ledger.md
src/ui/: BrandMark.h  DeviceGlyph.h  DeviceSpec.h  EqCurve.h  HeaderBrand.h  IconButton.h  LevelMeter.h  LibraryManager.h  OrbitCabLookAndFeel.h  PerfBadge.h  PowerampManager.h  PreampManager.h  PreampMenuLNF.h  SettingsPanel.h  SlotComponent.cpp  SlotComponent.h  SnapshotButton.h  SpectrumAnalyser.h  TubeDisplay.h  VersionBadge.h  WaveformDisplay.cpp  WaveformDisplay.h
tests/: AmpEqTests.cpp  AmpStageTests.cpp  AutoLevelerTests.cpp  BlendAnalysisTests.cpp  CabEngineTests.cpp  CoreConvolverGolden.cpp  CoreConvolverRealIr.cpp  IRSlotTests.cpp  IrNormalizationTests.cpp  LatencyPdcTest.cpp  MetadataTests.cpp  NamCodecTests.cpp  PowerAmpCoreGolden.cpp  PowerAmpRouterAlignTests.cpp  PowerAmpScaffoldGolden.cpp  PowerAmpSwitchLevelTest.cpp  PowerampLibraryTests.cpp  PreampLibraryTests.cpp  PreampRigTests.cpp  PreampSelectorTests.cpp  RigConformanceTests.cpp  RigPackTests.cpp  StateModelTests.cpp  SvfSmootherNull.cpp  TestMain.cpp  WaveformMathTests.cpp
tools/dsp-test/: measure_fades.cpp  poweramp_toggle_probe.cpp  switch_probe.cpp  test_trim.cpp  tube_audition.cpp
tools/namz/: namzpack.cpp
